--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>반응형웹실습2</title>
+  <title>index</title>
   <link rel="stylesheet" href="css/index.css">
-  <link rel="shortcut icon" href="./img/favicon.png">
 </head>
 
 <body>
@@ -15,16 +14,143 @@
     <div class="header">
       <div class="inner-header">
         <div class="nav">
-          <div class="right-menu">
-            <span class="menu">=</span>
-            <div class="gnb">
-              <ul>
-                <li><a href="#sec1">HOME</a></li>
-                <li><a href="#sec2">HTML&CSS</a></li>
-                <li><a href="#sec3">JAVASCRIPT</a></li>
-                <li><a href="#sec4">SKILLS</a></li>
-                <li><a href="#sec5">PORTPOLIO</a></li>
-              </ul>
+          <h1 class="logo"><a href="index.html"><img src="img/cos_logo.png" alt="logo_img"></a></h1>
+          <div class="gnb">
+            <ul>
+              <li><a href="#">WOMEN</a>
+                <ul class="sub">
+                  <li><a href="#">Outer</a>
+                    <ul class="sub2">
+                      <li><a href="#">Coat</a></li>
+                      <li><a href="#">Cardigan</a></li>
+                      <li><a href="#">Jacket</a></li>
+                      <li><a href="#">Jumper</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Top</a>
+                    <ul class="sub2">
+                      <li><a href="#">Sweater</a></li>
+                      <li><a href="#">Top</a></li>
+                      <li><a href="#">Shirts</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Bottom</a>
+                    <ul class="sub2">
+                      <li><a href="#">Jean</a></li>
+                      <li><a href="#">Shorts</a></li>
+                      <li><a href="#">Skirt</a></li>
+                      <li><a href="#">Leggings</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Dress</a></li>
+                  <li><a href="#">Acc</a>
+                    <ul class="sub2">
+                      <li><a href="#">Necklace</a></li>
+                      <li><a href="#">Ring</a></li>
+                      <li><a href="#">Bracelet</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Bag</a></li>
+                  <li><a href="#">Shoes</a></li>
+                </ul>
+              </li>
+              <li><a href="#">MEN</a>
+                <ul class="sub">
+                  <li><a href="#">Outer</a>
+                    <ul class="sub2">
+                      <li><a href="#">Coat</a></li>
+                      <li><a href="#">Jacket</a></li>
+                      <li><a href="#">Jumper</a></li>
+                      <li><a href="#">Cardigan</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Top</a>
+                    <ul class="sub2">
+                      <li><a href="#">Sweater</a></li>
+                      <li><a href="#">Top</a></li>
+                      <li><a href="#">Shirts</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Bottom</a>
+                    <ul class="sub2">
+                      <li><a href="#">Jean</a></li>
+                      <li><a href="#">Shorts</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Acc</a></li>
+                  <li><a href="#">Shoes</a></li>
+                </ul>
+              </li>
+              </li>
+              <li><a href="#">GIRLS</a>
+                <ul class="sub">
+                  <li><a href="#">Outer</a>
+                    <ul class="sub2">
+                      <li><a href="#">Coat</a></li>
+                      <li><a href="#">Cardigan</a></li>
+                      <li><a href="#">Jacket</a></li>
+                      <li><a href="#">Jumper</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Top</a>
+                    <ul class="sub2">
+                      <li><a href="#">Sweater</a></li>
+                      <li><a href="#">Top</a></li>
+                      <li><a href="#">Shirts</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Bottom</a>
+                    <ul class="sub2">
+                      <li><a href="#">Jean</a></li>
+                      <li><a href="#">Shorts</a></li>
+                      <li><a href="#">Skirt</a></li>
+                      <li><a href="#">Leggings</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Dress</a>
+                  <li><a href="#">Acc</a>
+                  <li><a href="#">Bag</a></li>
+                  <li><a href="#">Shoes</a></li>
+                </ul>
+              </li>
+              </li>
+              <li><a href="#">BOYS</a>
+                <ul class="sub">
+                  <li><a href="#">Outer</a>
+                    <ul class="sub2">
+                      <li><a href="#">Coat</a></li>
+                      <li><a href="#">Cardigan</a></li>
+                      <li><a href="#">Jacket</a></li>
+                      <li><a href="#">Jumper</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Top</a>
+                    <ul class="sub2">
+                      <li><a href="#">Sweater</a></li>
+                      <li><a href="#">Top</a></li>
+                      <li><a href="#">Shirts</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Bottom</a>
+                    <ul class="sub2">
+                      <li><a href="#">Jean</a></li>
+                      <li><a href="#">Shorts</a></li>
+                      <li><a href="#">Skirt</a></li>
+                      <li><a href="#">Leggings</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Acc</a>
+                  <li><a href="#">Bag</a></li>
+                  <li><a href="#">Shoes</a></li>
+                </ul>
+              </li>
+              </li>
+              <li class="li"><a href="#">SALE</a></li>
+            </ul>
+          </div>
+          <div class="menu">
+            <div class="menu-con">
+              <span class="menu"><a href="#">+</a></span>
             </div>
           </div>
         </div>
@@ -34,121 +160,48 @@
       <div class="inner-container">
         <div class="index">
           <div class="sections">
-            <div class="section sec1" id="sec1">
+            <!-- sec1 -->
+            <div class="section sec1">
               <div class="sec-con">
-                <video autoplay muted loop>
-                  <source src="video/video1.mp4" type="video/mp4">
-                </video>
-                <div class="sec1-txt">
-                  <h1 class="title">Portpolio & Skills</h1>
-                  <p>Web Project Ver 1.0</p>
-                  <span class="date">11.02.2022</span>
+                <div class="gallery">
+                  <ul>
+                    <li><img src="img/gallery5.png" alt="gallery_img"></li>
+                    <li><img src="img/gallery5.png" alt="gallery_img"></li>
+                    <li><img src="img/gallery5.png" alt="gallery_img"></li>
+                    <li><img src="img/gallery5.png" alt="gallery_img"></li>
+                    <li><img src="img/gallery5.png" alt="gallery_img"></li>
+                  </ul>
+                </div>
+                <div class="center-btn">
+                  <span class="arrow arrowLeft"></span>
+                  <span class="arrow arrowRight"></span>
+                </div>
+                <div class="bcon">
+                  <div class="items">
+                    <ul>
+                      <li class="on"></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
             <!-- sec2 -->
-            <div class="section sec2" id="sec2">
+            <div class="section sec2">
               <div class="sec-con">
-                <h1 class="title">HTML&CSS</h1>
-                <div class="img-con">
-                  <ul>
-                    <li><img src="img/s0.jpg" alt="s0"></li>
-                    <li><img src="img/s1.jpg" alt="s1"></li>
-                    <li><img src="img/s2.jpg" alt="s2"></li>
-                    <li><img src="img/s3.jpg" alt="s3"></li>
-                    <li><img src="img/s4.jpg" alt="s4"></li>
-                  </ul>
-                  <div class="bcon">
-                    <div class="items">
-                      <ul>
-                        <li class="on"></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <p class="p1">Lorem ipsum dolor sit amet, consectetur
-                  adipisicing elit. Reprehenderit eum vitae quod excepturi
-                  dolores doloribus blanditiis quisquam inventore expedita
-                  omnis totam aspernatur illum dolorem, beatae nisi tenetur
-                  officiis dolor debitis. Lorem ipsum dolor sit amet, consectetur
-                  adipisicing elit. Reprehenderit eum vitae quod excepturi
-                  dolores doloribus blanditiis quisquam inventore expedita
-                  omnis totam aspernatur illum dolorem, beatae nisi tenetur
-                  officiis dolor debitis.</p>
-                <div class="btn-con">
-                  <span class="detail">
-                    Example Go!!
-                  </span>
-                </div>
-              </div>
-            </div>
-            <!-- sec3 -->
-            <div class="section sec3" id="sec3">
-              <div class="sec-con">
-                <video autoplay muted loop>
-                  <source src="video/video1.mp4" type="video/mp4">
-                </video>
-                <div class="sec3-txt">
-                  <h1 class="title">My Skills</h1>
-                  <p>Portpolio GO!!</p>
-                </div>
-              </div>
-            </div>
-            <!-- sec4 -->
-            <div class="section sec4" id="sec4">
-              <div class="sec-con">
-                <h1 class="title">JavaScript Skill1</h1>
-                <div class="img-con">
-                  <ul>
-                    <li><img src="img/s5.jpg" alt="s5"></li>
-                    <li><img src="img/s6.jpg" alt="s6"></li>
-                    <li><img src="img/s7.jpg" alt="s7"></li>
-                    <li><img src="img/s8.jpg" alt="s8"></li>
-                    <li><img src="img/s9.jpg" alt="s9"></li>
-                  </ul>
-                  <div class="center-btn">
-                    <span class="arrow arrowLeft"></span>
-                    <span class="arrow arrowRight"></span>
-                  </div>
-                </div>
-                <div class="bottom-con">
-                  <ul>
-                    <li>
-                      <h1 class="b-title">
-                        when
-                      </h1>
-                      <p>
-                        Lorem ipsum dolor sit amet, consectetur
-                        adipisicing elit.lorem, beatae nisi tenetur
-                        officiis dolor debitis. Lorem ipsum
-                      </p>
-                    </li>
-                    <li>
-                      <h1 class="b-title">
-                        where
-                      </h1>
-                      <p>
-                        Lorem ipsum dolor sit amet, consectetur
-                        adipisicing elit.
-                      </p>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-            </div>
-              <!-- sec5 -->
-            <div class="section sec5" id="sec5">
-              <div class="sec-con">
-                <div class="sec5-con">
-                  <h1 class="title">PORTPOLIO GO SITE!</h1>
-                  <p>Web Project By January 2022 </p>
-                  <span class="foBtn">Go View!</span>
-                </div>
+                <ul>
+                  <li class="li"><img src="img/sec2_0.jpg" alt="sec2_0_img"></li>
+                  <li class="li"><img src="img/sec2_1.jpg" alt="sec2_1_img"></li>
+                  <li class="li"><img src="img/sec2_2.jpg" alt="sec2_2_img"></li>
+                  <li class="li"><img src="img/sec2_3.jpg" alt="sec2_3_img"></li>
+                  <li class="li2"><img src="img/sec2_4.jpg" alt="sec2_4_img"></li>
+                  <li class="li2"><img src="img/sec2_5.jpg" alt="sec2_5_img"></li>
+                  <li class="li2 li3"><img src="img/sec2_6.jpg" alt="sec2_6_img"></li>
+                  <li class="li2 li3"><img src="img/sec2_7.jpg" alt="sec2_7_img"></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -158,13 +211,25 @@
     <div class="footer">
       <div class="inner-footer">
         <div class="fcon">
-          Powered by <a href="#">portpolio.co.kr</a>
+          <div class="ftop-menu">
+            <ul>
+              <li><a href="#">CONTACT US</a></li>
+              <li><a href="#">GUIDE</a></li>
+              <li><a href="#">POLICY</a></li>
+              <li><a href="#">RETURNS & REFUNDS</a></li>
+              <li><a href="https://www.instagram.com/cosstores_kr/">SNS</a></li>
+              <li><a href="#">&copy;COS</a></li>
+            </ul>
+          </div>
+          <div class="fbottom-menu">
+            <h1 class="title"><a href="index.html">COS</a></h1>
+            <P> Email Address : thankyourim@gmail.com </P>
+            <P>Number : +82 10 0000 0000 </P>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
-
 </body>
 
 </html>
